tests/pass/function_call_exp.jlite
class Main {
    Void main(Int a, Void v, String s) {
        Greet z;
        z.sayhi(v, "Hello", s, a + 32, a < 89, null);
    }
}

class Greet {
    Void sayhi(Void z, String s, String b, Int a, Bool p, Void v1) {
        if(p) {
            println(s);
        } else {
            println(b);
        }
    }
}