tests/fail/no_methods.jlite
class Main {
    Void main(Int a, Void z) {
        Int c;
        String z;
        Main m;
    }
}